<resources>
    <string name="app_name">Cines Carlos</string>
    <string name="boton1">Mapa</string>
    <string name="boton2">Registro de usuario</string>
    <string name="boton3">LOG IN</string>
    <string name="iconoregistro">Icono registro</string>
    <string name="title_activity_maps1">Map</string>
    <string name="txt_registro">Usuario</string>
    <string name="txt_email">E-Mail</string>
    <string name="txt_password">Password</string>
    <string name="botonentradas">Entrar</string>
    <string name="registrousuario">Registrate</string>
    <string name="txtregistrousuario">Registro Usuario</string>
    <string name="txtLogin">Log In</string>
    <string name="user">Usuario</string>
    <string name="txtUser">Usuario</string>
    <string name="btn1">Cartelera</string>
    <string name="btn2">Area Personal</string>
    <string name="btn3">Historial Entradas</string>
    <string name="txtus">Usuario</string>
    <string name="BtnCardTrailer">TRAILER</string>
    <string name="BtnCardCompra">COMPRAR</string>
    <string name="lupaaction">buscar</string>
    <string name="txtbienvenido">Bienvenido</string>
    <string name="btnactualizar">Actualizar</string>
    <string name="etnombre">Nombre</string>
    <string name="etapellido">Apellido</string>
    <string name="creditCard">Tarjeta de crédito</string>
    <string name="ettelofono">Teléfono</string>
    <string name="spinnercines">Seleccione cine</string>
    <string name="Fecha">Seleccione una fecha</string>
    <string name="Hora1">16:15</string>
    <string name="Hora2">18:30</string>
    <string name="Hora3">22:30</string>
    <string name="Seleccion">Seleccione sesión:</string>
    <string name="Seleccionbu">Seleccione butacas</string>
    <string name="selectbu">Seleccionar</string>
    <string name="txPeli">Seleccionar</string>
    <string name="txCine">Cine</string>
    <string name="txPrecio">€</string>
    <string name="txFecha">Fecha</string>
    <string name="txHora">Hora</string>
    <string name="btnComprafinal">Confirmar pedido</string>
    <string name="txNombre">Nombre</string>
    <string name="txCorreo">Correo</string>
    <string name="txButacas">Butacas</string>
    <string name="txTarjeta">Tarjeta</string>
    <string name="GenerarQR"> Confirmar Compra</string>
    <string name="EnPeli"> Peli</string>
    <string name="EnCine"> Cine</string>
    <string name="Enhora"> Hora</string>
    <string name="EnFecha"> Fecha</string>
    <string name="Enbutacas"> Butacas</string>
    <string name="txtCinesCarlos"> Titulo</string>
    <string name="txtHorario"> Horario</string>
    <string name="txtTelefono"> Telefono</string>
    <string name="txtPeliculas"> Peliculas</string>
    <string name="txtCuenta"> ¿Ya tienes cuenta?</string>
    <string name="CinesDisponibles"> Cines Disponibles</string>
    <string name="txtDisponible"> Disponible en:</string>
    <string name="email_error">error_email</string>
    <string name="email_doesnt_match">error_formato_email</string>
    <string name="email_error_no_update">error_mismo_email</string>
    <string name="password_error">error_password</string>
    <string name="password_error_less_than">Password debe ser mayor de 4 caracteres</string>


</resources>
