<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondonegro"
    android:orientation="vertical"
    tools:context=".Principal">

    <Button
        android:id="@+id/btn1"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/botonentradas"
        android:onClick="ecartelera"
        android:text="@string/btn1"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn2"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/botonarea"
        android:onClick="eareapersonal"
        android:text="@string/btn2"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn3"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/botonhistorial"
        android:onClick="historial"
        android:text="@string/btn3"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtus"
        android:layout_width="5dp"
        android:layout_height="3dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#5A2F22"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="171dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logocinescarlos" />

</LinearLayout>