<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondonegro"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imlogo"
        android:layout_width="226dp"
        android:layout_height="278dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logocinescarlos" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/boton1"
            style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="Mapa"
            android:singleLine="false"
            android:soundEffectsEnabled="false"
            android:text="@string/boton1"
            android:textColor="#00838F"
            android:textColorHint="#C62828"
            android:textSize="38sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/boton2"
            style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:onClick="Registro"
            android:singleLine="false"
            android:soundEffectsEnabled="false"
            android:text="@string/boton2"
            android:textColor="#00838F"
            android:textColorHint="#C62828"
            android:textSize="38sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/boton3"
            style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:onClick="Login"
            android:singleLine="false"
            android:soundEffectsEnabled="false"
            android:text="@string/boton3"
            android:textColor="#00838F"
            android:textColorHint="#C62828"
            android:textSize="38sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>