<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3E5F8A"
        android:backgroundTint="#2000838F"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EnPeli"
                style="@android:style/Widget.TextView.PopupMenu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/EnPeli"
                android:textColor="#09C9DA"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="25dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Bidi"
                android:layout_width="100dp"
                android:layout_height="174dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                tools:srcCompat="@tools:sample/backgrounds/scenic[0]" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="243dp"
            android:layout_height="166dp"
            android:layout_marginLeft="165dp"
            android:layout_marginTop="45dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/EnCine"
                style="@android:style/Widget.DeviceDefault.Light.TextView"
                android:layout_width="188dp"
                android:layout_height="2dp"
                android:layout_marginTop="60dp"
                android:layout_weight="1"
                android:text="@string/EnCine"
                android:textColor="#1D8F81"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Enhora"
                style="@android:style/Widget.DeviceDefault.Light.TextView"
                android:layout_width="185dp"
                android:layout_height="7dp"
                android:layout_weight="1"
                android:text="@string/Enhora"
                android:textColor="#1D8F81"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/EnFecha"
                style="@android:style/Widget.DeviceDefault.Light.TextView"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="1"
                android:text="@string/EnFecha"
                android:textColor="#1D8F81"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Enbutacas"
                style="@android:style/Widget.DeviceDefault.Light.TextView"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="1"
                android:text="@string/Enbutacas"
                android:textColor="#1D8F81"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>